--- a/labas.html
+++ b/labas.html
@@ -103,18 +103,9 @@ text-align:center;
 		<div class ="nav">
 			<ul>
 
-				<li><a href ='labas.html'> pirmas </a> </li>
+				<li><a href ='#'> tu </a> </li>
 
-				<li><a href ='#'> antras </a>
-
-					<ul>
-					<li><a href ='#'> 1 </a> </li>
-					<li><a href ='#'> 2 </a> </li>
-					<li><a href ='#'> 3 </a> </li>
-					</ul>
-
-				</li>
-				<li><a href ='#'> trecias </a>
+				<li><a href ='#'> esi </a>
 
 					<ul>
 					<li><a href ='#'> 1 </a> </li>
@@ -123,7 +114,16 @@ text-align:center;
 					</ul>
 
 				</li>
-				<li><a href ='#'> ketvirtas </a>
+				<li><a href ='#'> krabas </a>
+
+					<ul>
+					<li><a href ='#'> 1 </a> </li>
+					<li><a href ='#'> 2 </a> </li>
+					<li><a href ='#'> 3 </a> </li>
+					</ul>
+
+				</li>
+				<li><a href ='#'> :) </a> 
 
 					<ul>
 					<li><a href ='#'> 1 </a> </li>
