--- a/index.html
+++ b/index.html
@@ -55,21 +55,20 @@ display:block;
 .nav ul li {
 float:left;
 list-style:none;
-
+margin-left: none;
 }
 
 .nav ul ul {
 display:none;
 background:rgba(0,0,0,.90);
-padding 0;
-margin 0;
+padding: 0; <!-- sitas padaro, kad nebutu padding bei margin iskleidime -->
+margin: 0;
 position:absolute; top:100%;
 }
 
 .nav ul li:hover > ul{
 display:block;
 border-radius:10px;
-
 }
 
 .nav ul li :hover{
@@ -83,12 +82,14 @@ color:white;
 .nav ul ul li{
 float:none;
 position:relative;
+
 }
 
 .nav ul ul li a{
 padding:10px;
 color:white;
 text-align:center;
+
 
 }
 
