--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ line-height:25px;
 .nav{
 width:100%;
 background:rgba(0,0,0,.90);
-margin-left: 50px;
-margin-right: 50px;
+padding: left: 50px;
+
 }
 
 .nav ul{
@@ -30,7 +30,7 @@ margin:0;
 list-style:none;
 position:relative;
 line-height: 30px;
-padding-left: 30px;
+
 
 }
 
