--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ padding: left: 50px;
 }
 
 .nav ul{
-padding:0;
 margin:0;
 list-style:none;
 position:relative;
@@ -61,7 +60,7 @@ margin-left: none;
 .nav ul ul {
 display:none;
 background:rgba(0,0,0,.90);
-padding: 0; <!-- sitas padaro, kad nebutu padding bei margin iskleidime -->
+ <!-- sitas padaro, kad nebutu padding bei margin iskleidime -->
 margin: 0;
 position:absolute; top:100%;
 }
