--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 body{
 margin: 0;
-
+padding: 0;
 background-image: url("court.jpg");
 background-size:cover;
 font-family: Century Gothic;
@@ -20,6 +20,8 @@ line-height:25px;
 .nav{
 width:100%;
 background:rgba(0,0,0,.90);
+padding: left: 50px;
+
 }
 
 .nav ul{
@@ -29,12 +31,13 @@ list-style:none;
 position:relative;
 line-height: 30px;
 
+
 }
 
 .nav ul li a{
 display:block;
 padding:10px;
-width:250px;
+width:200px;
 color:white;
 text-decoration:none;
 text-align:center;
@@ -58,7 +61,7 @@ margin-left: none;
 .nav ul ul {
 display:none;
 background:rgba(0,0,0,.90);
-padding: 0;
+ <!-- sitas padaro, kad nebutu padding bei margin iskleidime -->
 margin: 0;
 position:absolute; top:100%;
 }
