--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@ margin:0;
 list-style:none;
 position:relative;
 line-height: 30px;
-
+padding-left: 80px;
+padding-right: 80px;
 }
 
 .nav ul li a{
 display:block;
 padding:10px;
-width:250px;
+width:150px;
 color:white;
 text-decoration:none;
 text-align:center;
 border-radius:10px;
 font-family:Century Gothic;
 font-weight:bold;
+
 
 }
 
