--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@ line-height:25px;
 .nav{
 width:100%;
 background:rgba(0,0,0,.90);
-padding: left: 50px;
-
 }
 
 .nav ul{
@@ -62,7 +60,7 @@ margin-left: none;
 .nav ul ul {
 display:none;
 background:rgba(0,0,0,.90);
- <!-- sitas padaro, kad nebutu padding bei margin iskleidime -->
+padding: 0;
 margin: 0;
 position:absolute; top:100%;
 }
