--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title> Nezinoma sveitaine </title>
 <meta charset="utf-8">
 
+
 <style>
+
 
 body{
 margin: 0;
@@ -28,14 +30,14 @@ margin:0;
 list-style:none;
 position:relative;
 line-height: 30px;
-padding-left: 80px;
-padding-right: 80px;
+padding-left: 150px;
+padding-right: 150px;
 }
 
 .nav ul li a{
 display:block;
 padding:10px;
-width:150px;
+width:200px;
 color:white;
 text-decoration:none;
 text-align:center;
@@ -60,10 +62,7 @@ margin-left: none;
 .nav ul ul {
 display:none;
 background:rgba(0,0,0,.90);
-<<<<<<< HEAD
-=======
 padding: 0;
->>>>>>> 8de491aae866f3d214abd2ca99ec41ffdf214237
 margin: 0;
 position:absolute; top:100%;
 }
@@ -91,23 +90,70 @@ position:relative;
 padding:10px;
 color:white;
 text-align:center;
+}
 
+#header {
+	background:rgba(0,0,0);
+	background-size:cover;
+	font-family:Century Gothic;
+	font-weight:bold;
+	color:white;
+	text-align: center;
+	width: 100%;
+}
+
+#header img {
+  float: left;
+  width: 100px;
+  height: 100px;
+
+}
+
+#header h1 {
+	float: center;
+	margin: 0;
+	padding: 30px;
+}
+
+
+
+#content {
+	background:rgba(255,255,255);
+	float: right;
+	min-height: 300px;
+	padding: 0px 10px;
+
+width: 100%;
+
+	font-family:Century Gothic;
+	font-weight:bold;
+	color:white;
+
+}
+
+#content h2 {
+	margin: 10px 0;
 
 }
 
 
 </style>
 
-
-
-
 </head>
 
 	<body>
 		<div class ="nav">
+
+		<div id="header">
+	  <img src="ball.jpg" />
+	  <h1>Krepšinis</h1>
+		</div>
+
+		</header>
+
 			<ul>
 
-				<li><a href ='labas.html'> pirmas </a> </li>
+				<li><a href ='#'> pirmas </a> </li>
 
 				<li><a href ='#'> antras </a>
 
@@ -116,8 +162,8 @@ text-align:center;
 					<li><a href ='#'> 2 </a> </li>
 					<li><a href ='#'> 3 </a> </li>
 					</ul>
-
 				</li>
+
 				<li><a href ='#'> trecias </a>
 
 					<ul>
@@ -125,20 +171,26 @@ text-align:center;
 					<li><a href ='#'> 2 </a> </li>
 					<li><a href ='#'> 3 </a> </li>
 					</ul>
-
 				</li>
+
 				<li><a href ='#'> ketvirtas </a>
 
 					<ul>
 					<li><a href ='#'> 1 </a> </li>
 					<li><a href ='#'> 2 </a> </li>
-					<li><a href ='#'> 3 </a> </li>
 					</ul>
 				</li>
 
 				<li style="float:right"><a href ='#'> Prisijungti </a> </li>
 
 			</ul>
+
+
+
+			<div id="content">
+				<article>
+					<h2> Puslapio tekstas </h2>
+
 
 		</div>
 
