--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ text-align:center;
 	width: 100%;
 }
 
-#header img {
+.header img {
   float: left;
   width: 100px;
   height: 100px;
 
 }
 
-#header h1 {
+.header h1 {
 	float: center;
 	margin: 0;
 	padding: 30px;
@@ -141,15 +141,15 @@ width: 100%;
 
 </head>
 
+		<header>
+		  <h1><img src="ball.jpg"/>Krepšinis</h1>
+		</header>
+
+
 	<body>
 		<div class ="nav">
 
-		<div id="header">
-	  <img src="ball.jpg" />
-	  <h1>Krepšinis</h1>
-		</div>
 
-		</header>
 
 			<ul>
 
