--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ header h1{
 
 				<li><a href ='#'> pirmas </a> </li>
 
-				<li><a href ='#'> antras  &#9660</a>
+				<li><a href ='#'> antras  &#9660</a></li>
 
-						<ul>
+				<ul>
 
 					<li><a href ='#'> 1 </a> </li>
 					<li><a href ='#'> 2 </a> </li>
@@ -157,7 +157,7 @@ header h1{
 				</ul>
 				</li>
 
-				<li><a href ='#'> trecias &#9677</a>
+				<li><a href ='#'> trecias <span style="float:right;">&#9677</span></a>
 
 					<ul>
 					<li><a href ='#'> 1 </a> </li>
@@ -166,7 +166,7 @@ header h1{
 					</ul>
 				</li>
 
-				<li><a href ='#'> ketvirtas &#9677 </a>
+				<li><a href ='#'> ketvirtas <span style="float:right;">&#9677</span> </a>
 
 					<ul>
 					<li><a href ='#'> 1 </a> </li>
