--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ header h1{
 
 				<li><a href ='#'> pirmas </a> </li>
 
-				<li><a href ='#'> antras  &#9660</a></li>
+				<li><a href ='#'> antras  &#9660</a>
 
 				<ul>
 
