--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 
 <title> Nezinoma sveitaine </title>
 <meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 
+@media screen and (max-width: 800px) {
+body {
+    width: 46%;
+  }
+}
+@media screen and (max-width: 400px) {
+body {
+    width: 92%;
+  }
+}
 
 body{
 margin: 0;
@@ -147,7 +157,7 @@ header h1{
 
 				<li><a href ='#'> pirmas </a> </li>
 
-				<li><a href ='#'> antras  &#9660</a>
+				<li><a href ='#'> antras <span style="float:right;">&#9677</span></a>
 
 				<ul>
 
