--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <style>
 
 @media screen and (max-width: 800px) {
-body {
+.nav ul ul  {
     width: 46%;
   }
 }
 @media screen and (max-width: 400px) {
-body {
+.nav ul ul  {
     width: 92%;
   }
 }
@@ -170,6 +170,7 @@ header h1{
 				<li><a href ='#'> trecias <span style="float:right;">&#9677</span></a>
 
 					<ul>
+
 					<li><a href ='#'> 1 </a> </li>
 					<li><a href ='#'> 2 </a> </li>
 					<li><a href ='#'> 3 </a> </li>
