--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 
 <title> Nezinoma sveitaine </title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <style>
 
-@media screen and (max-width: 800px) {
-.nav ul ul  {
-    width: 46%;
-  }
-}
-@media screen and (max-width: 400px) {
-.nav ul ul  {
-    width: 92%;
-  }
-}
+
 
 body{
 margin: 0;
@@ -111,13 +104,13 @@ header {
 }
 
 header img{
-	height: 1em;
+	height: 2em;
 }
 
 header h1{
 	text-align: center;
 	margin:0;
-	padding: 30px;
+	padding: 35px;
 }
 
 #content {
@@ -138,6 +131,20 @@ header h1{
 
 }
 
+p {
+
+	background:rgb(242, 150, 13,.90);
+	font-family:Century Gothic;
+	font-weight:bold;
+	color:black;
+	text-align: center;
+	padding-left: 100px;
+	padding-right: 100px;
+
+}
+
+
+
 
 </style>
 
@@ -147,41 +154,45 @@ header h1{
 	<body>
 
 <header>
-	<h1><img src="ball.jpg"/>Krepšinis</h1>
+	<h1><img src="ball.jpg"/>Lietuvos vyrų krepšinio rinktinės, priziniai pasiekimai.</h1>
 </header>
 
 
 		<div class ="nav">
 
+
 			<ul>
 
-				<li><a href ='#'> pirmas </a> </li>
+				<li><a href ='#'> Pagrindinis </a> </li>
 
-				<li><a href ='#'> antras <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Auksas <span style="float:right;">&#9677</span></a>
 
 				<ul>
 
-					<li><a href ='#'> 1 </a> </li>
-					<li><a href ='#'> 2 </a> </li>
-					<li><a href ='#'> 3 </a> </li>
+					<li><a href ='#'> 1937 m. Europos čempionatas </a> </li>
+					<li><a href ='#'> 1939 m. Europos čempionatas  </a> </li>
+					<li><a href ='#'> 2003 m. Europos čempionatas  </a> </li>
 				</ul>
 				</li>
 
-				<li><a href ='#'> trecias <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Sidabras <span style="float:right;">&#9677</span></a>
 
 					<ul>
 
-					<li><a href ='#'> 1 </a> </li>
-					<li><a href ='#'> 2 </a> </li>
-					<li><a href ='#'> 3 </a> </li>
+					<li><a href ='#'> 1995 m. Europos čempionatas </a> </li>
+					<li><a href ='#'> 2013 m. Europos čempionatas </a> </li>
+					<li><a href ='#'> 2015 m. Europos čempionatas </a> </li>
 					</ul>
 				</li>
 
-				<li><a href ='#'> ketvirtas <span style="float:right;">&#9677</span> </a>
+				<li><a href ='#'> Bronza <span style="float:right;">&#9677</span> </a>
 
 					<ul>
-					<li><a href ='#'> 1 </a> </li>
-					<li><a href ='#'> 2 </a> </li>
+					<li><a href ='#'> 1992 m. Olimpinės žaidynės  </a> </li>
+					<li><a href ='#'> 1996 m. Olimpinės žaidynės </a> </li>
+					<li><a href ='#'> 2000 m. Olimpinės žaidynės</a> </li>
+					<li><a href ='#'> 2007 m. Europos čempionatas </a> </li>
+					<li><a href ='#'> 2010 m. Pasaulio čempionatas </a> </li>
 					</ul>
 				</li>
 
@@ -193,6 +204,9 @@ header h1{
 			<div id="content">
 				<article>
 					<h2> Puslapio tekstas </h2>
+					<p> Tekstas – duomenys, pateikiami ženklais, simboliais, žodžiais, žodžių junginiais, sakiniais,
+						 pastraipomis, lentelėmis, išnašomis ar kitais ženklų junginiais, parengti siekiant perteikti prasmę ir
+						darant prielaidą, jog jie suvokiami skaitytojų, mokančių tam tikrą natūraliąją arba dirbtinę kalbą.</p>
 				</article>
 
 		</div>
