--- a/1937.html
+++ b/1937.html
@@ -7,20 +7,11 @@
 <link rel="stylesheet" type="text/css" href="nav.css">
 <link rel="stylesheet" type="text/css" href="wstyle.css">
 
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-<style>
-
-body{
-margin: 0;
-padding: 0;
-background-image: url("kk.jpg");
-background-size:cover;
-font-family: Century Gothic;
-font-size:20px;
-line-height:25px;
-}
 
 
 </style>
@@ -29,10 +20,10 @@ line-height:25px;
 
 
 	<body>
-<div id="page">
+	<div class="content">
 
 <header>
-	<h1><img src="ball.jpg"/>Lietuvos vyrų krepšinio rinktinės, priziniai pasiekimai.</h1>
+	<h1><img src="ball.jpg"/> Svarbiausi Lietuvos nacionalinės vyrų krepšinio rinktinės laimėjimai.</h1>
 </header>
 
 
@@ -40,7 +31,7 @@ line-height:25px;
 
 			<ul>
 
-				<li><a href ='sav.html'> Pagrindinis </a> </li>
+				<li><a href ='index.html'> Pagrindinis </a> </li>
 
 				<li><a href ='#'> Auksas <span class="unicode"> &#9677;</span></a>
 
@@ -78,22 +69,146 @@ line-height:25px;
 			</ul>
 		</nav>
 
-			<div class="content">
 
-				<article>
-					<h2> 1937 </h2>
-					</article>
-
-					<p> Lietuvos krepšinio istorija prasideda nuo 1920 m. Iki ketvirtojo dešimtmečio vidurio jis nebuvo itin populiarus.</p>
+				<div class="container">
 
 
+									<div class="left">
 
-		</div>
+				<section>
+					<h2> Europos čempionatas 1937 m. </h2>
+
+					<p> Antrosios Europos vyrų krepšinio pirmenybės vyko Latvijos sostinėjė Rygoje 1937 m. Krepšininkus ruošė žaidžiantysis treneris Feliksas Kriaučiūnas. 1937 metais Lietuvos
+				  vyrų rinktinė į Europos čempionatą Rygoje atvyko būdami autsaideriais. Tačiau tai nesutrukdė Lietuvos rinktinei pirmą kartą tapti Europos čempionais.
+				 	 </p>
+
+					<div class="row">
+					 <div class="column">
+						 <img src="foto/1937/feliksaskrauciunas.jpg" alt="Kriaučiūnas" >
+						 <figcaption>Feliksas Kraučiūnas <br> (1911-1977) m.</figcaption>
+					 </div>
+					 <div class="column">
+						 <img src="foto/1937/stasyssackus.jpg" alt="Šackus">
+						 <figcaption>Stasys Šackus <br> (1907-1985) m.</figcaption>
+					 </div>
+					 <div class="column">
+						 <img src="foto/1937/pranastalzunas.jpg" alt="Talzūnas" >
+						 <figcaption> Pranas Talzūnas <br> (1913-1984) m.</figcaption>
+					 </div>
+					 <div class="column">
+ 					 <img src="foto/1937/kepalas.jpg" alt="Kepalas" >
+ 					 <figcaption> Leopoldas Kepalas (viduryje) <br> (1913-1981) m. </figcaption>
+ 					</div>
+
+				 </div>
+
+	 <div class="row">
+					 <div class="column">
+					  <img src="foto/1937/pranasmazeika.jpg" alt="Mažeika">
+					  <figcaption>Pranas Mažeika <br> (1917-2010) m.</figcaption>
+					 </div>
+					 <div class="column">
+					  <img src="foto/1937/zenonaspuzinauskas.jpg" alt="Puzinauskas" >
+					  <figcaption> Zenonas Puzinauskas <br> (1920-1995 ) m.</figcaption>
+					 </div>
+					 <div class="column">
+					  <img src="foto/1937/arturasandriulis.jpg" alt="Andriulis">
+					  <figcaption>Artūras Andriulis <br> (1922-1981 ) m.</figcaption>
+					 </div>
+		 		 	<div class="column">
+		 			 <img src="foto/1937/leonaspetrauskas.jpg" alt="Petrauskas" >
+		 			 <figcaption>Leonas Petrauskas <br> (1919-1994) m.</figcaption>
+		 		 	</div>
+		 	 </div>
+
+ <div class="row">
+	 <div class="column">
+	 <img src="foto/1937/ceslovasdauksa.jpg" alt="Daukša">
+	 <figcaption>Česlovas Daukša (dešinėje) <br> (1916-?) m.</figcaption>
+	</div>
+	<div class="column">
+		<img src="foto/1937/juozaszukas.jpg" alt="Žukas">
+		<figcaption>Juozas Žukas <br> -</figcaption>
+	</div>
+	<div class="column">
+	<img src="foto/1937/leonasbaltrunas.jpg" alt="Baltrūnas" >
+	<figcaption>Lenonas Baltrūnas <br> (1914-1993) m.</figcaption>
+ </div>
+	<div class="column">
+	 <img src="foto/1937/eugenijusnikolskis.jpg" alt="Nikolskis">
+	 <figcaption>Eugenijus Nikolskis <br> (1917-? ) m.</figcaption>
+	</div>
+</div>
+
+
+
+<figure>
+						<div class="foto">
+						<img src="foto/1937/1.jpg" alt="Lietuvos Čempionai" >
+			 				<figcaption> Europos krepšinio čempionai 1937 m. </figcaption>
+		</figure>
+					<p><br>dddkdkkkkkkkv kkkkkkkkkkkk kkkkkk kkkkfgf df fffffffffffffffffffffkkkkkkkkkk ooooooooooo oooooooooooo</p>
+					</div>
+
+				</section>
+
+
+				<div class="right">
+
+					<h2> Informacija ir vaizdo klipai</h2>
+
+					<table align="center">
+					<tr>
+					<th colspan="4" >1937 m. Europos čempionato galutinė rikiuotė </th>
+					</tr>
+					<tr>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					</tr>
+					<tr>
+					<td>Lietuva</td>
+					<td>1</td>
+					<td>Estija</td>
+					<td>5</td>
+					</tr>
+					<tr>
+					<td>Italija</td>
+					<td>2</td>
+					<td>Latvija</td>
+					<td>6</td>
+					</tr>
+					<tr>
+					<td>Prancūzija</td>
+					<td>3</td>
+					<td>Čekoslovakija</td>
+					<td>7</td>
+					</tr>
+					<tr>
+					<td>Lenkija</td>
+					<td>4</td>
+					<td>Egiptas</td>
+					<td>8</td>
+					</tr>
+					</table>
+<br>
+					<h3> Finalas (Lietuva - Italija) <br> galutinis rezultatas 24 – 23 </h3>
+					<iframe src="https://www.youtube.com/embed/ayL6BDcTFoU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+					<h3> Nugalėtojų sutiktuvės Lietuvoje </h3>
+					<iframe src="https://www.youtube.com/embed/Epdk3TDHkY4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+				</div>
+</div>
+<br>
+</div>
 
 		<footer>
 			2018 &copy; Laurynas Čižius
 			</footer>
-
+</div>
 
 </body>
 
