--- a/1939.html
+++ b/1939.html
@@ -1,26 +1,20 @@
 <html>
 <head>
 
-<title> Nezinoma sveitaine </title>
+<title> LTU </title>
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="nav.css">
 <link rel="stylesheet" type="text/css" href="wstyle.css">
+
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <style>
 
-body{
-margin: 0;
-padding: 0;
-background-image: url("pp.jpg");
-background-size:cover;
-font-family: Century Gothic;
-font-size:20px;
-line-height:25px;
-}
+
 
 </style>
 
@@ -28,19 +22,20 @@ line-height:25px;
 
 
 	<body>
+		<div class="content">
 
 <header>
-	<h1><img src="ball.jpg"/>Lietuvos vyrų krepšinio rinktinės, priziniai pasiekimai.</h1>
+	<h1><img src="ball.jpg"/> Svarbiausi Lietuvos nacionalinės vyrų krepšinio rinktinės laimėjimai.</h1>
 </header>
 
 
-		<div class ="nav">
+		<nav>
 
 			<ul>
 
-				<li><a href ='sav.html'> Pagrindinis </a> </li>
+				<li><a href ='index.html'> Pagrindinis </a> </li>
 
-				<li><a href ='#'> Auksas <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Auksas <span class="unicode"> &#9677;</span></a>
 
 				<ul>
 
@@ -50,7 +45,7 @@ line-height:25px;
 				</ul>
 				</li>
 
-				<li><a href ='#'> Sidabras <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Sidabras <span class="unicode"> &#9677;</span></a>
 
 					<ul>
 
@@ -60,7 +55,7 @@ line-height:25px;
 					</ul>
 				</li>
 
-				<li><a href ='1937.html'> Bronza <span style="float:right;">&#9677</span> </a>
+				<li><a href ='1937.html'> Bronza <span class="unicode"> &#9677;</span> </a>
 
 					<ul>
 					<li><a href ='1992.html'> 1992 m. Olimpinės žaidynės  </a> </li>
@@ -74,19 +69,151 @@ line-height:25px;
 				<li style="float:right"><a href ='#'> Prisijungti </a> </li>
 
 			</ul>
+		</nav>
+
+<div class="container">
+	<div class="left">
+				<section>
+					<h2> Europos čempionatas 1939 m. </h2>
+
+					<p> Antrosios Europos vyrų krepšinio pirmenybės vyko Latvijos sostinėjė Rygoje 1937 m. Krepšininkus ruošė žaidžiantysis treneris Feliksas Kriaučiūnas. 1937 metais Lietuvos
+					vyrų rinktinė į Europos čempionatą Rygoje atvyko būdami autsaideriais. Tačiau tai nesutrukdė Lietuvos rinktinei pirmą kartą tapti Europos čempionais.
+					 </p>
+
+					<div class="row">
+					 <div class="column">
+						 <img src="foto/1937/feliksaskrauciunas.jpg" alt="Kriaučiūnas" >
+						 <figcaption>Feliksas Kraučiūnas <br> (1911-1977) m.</figcaption>
+					 </div>
+					 <div class="column">
+						 <img src="foto/1939/pranaslubinas.jpg" alt="Lubinas">
+						 <figcaption>Pranas Lubinas <br> (1910-1999) m.</figcaption>
+					 </div>
+					 <div class="column">
+ 			 	 <img src="foto/1939/juozasjurgela.jpg" alt="Jurgėla" >
+ 					 <figcaption> Juozas Jurgėla <br> (1911-1961) m. </figcaption>
+ 					</div>
+					 <div class="column">
+ 				 	 <img src="foto/1937/leonasbaltrunas.jpg" alt="Baltrūnas" >
+ 				 	 <figcaption>Lenonas Baltrūnas <br> (1914-1993) m.</figcaption>
+ 				  </div>
+					 <div class="column">
+					 	<img src="foto/1937/eugenijusnikolskis.jpg" alt="Nikolskis">
+					 	<figcaption>Eugenijus Nikolskis <br> (1917-?) m.</figcaption>
+					 </div>
+				 </div>
+
+	 <div class="row">
+					 <div class="column">
+					  <img src="foto/1937/pranasmazeika.jpg" alt="Mažeika">
+					  <figcaption>Pranas Mažeika <br> (1917-2010) m.</figcaption>
+					 </div>
+					 <div class="column">
+					  <img src="foto/1937/zenonaspuzinauskas.jpg" alt="Puzinauskas" >
+					  <figcaption> Zenonas Puzinauskas <br> (1920-1995) m.</figcaption>
+					 </div>
+					 <div class="column">
+					  <img src="foto/1937/arturasandriulis.jpg" alt="Andriulis">
+					  <figcaption>Artūras Andriulis <br> (1922-1981) m.</figcaption>
+					 </div>
+		 		 	<div class="column">
+		 			 <img src="foto/1937/leonaspetrauskas.jpg" alt="Petrauskas" >
+		 			 <figcaption>Leonas Petrauskas <br> (1919-1994) m.</figcaption>
+		 		 	</div>
+		 		 	<div class="column">
+		 		 <img src="foto/1939/vytautaslescinskas.jpg" alt="Leščinskas">
+		 			 <figcaption>Vytautas Leščinskas <br> (1922-?) m.</figcaption>
+		 		 	</div>
+		 </div>
+
+		<div class="row">
+			<div class="column">
+			  <img src="foto/1939/vytautasnorkus.jpg" alt="Norkus" >
+				<figcaption> Vytautas Norkus <br> (1921-2014) m.</figcaption>
+			</div>
+			<div class="column">
+				<img src="foto/1939/mykolasruzgys.jpg" alt="Ruzgys" >
+				<figcaption> Mykolas Ruzgys <br> (1915- ?) m.</figcaption>
+			</div>
+			<div class="column">
+				<img src="foto/1939/mindaugassliupas.jpg" alt="Šliūpas">
+				<figcaption>Mindaugas Šliūpas <br> (1919-1979) m.</figcaption>
+			</div>
+			<div class="column">
+				<img src="foto/1939/vytautasbudriunas.jpg" alt="Budriūnas ">
+				<figcaption>Vytautas Budriūnas <br> (1908-2003) m. </figcaption>
+			</div>
 		</div>
 
-			<div id="content">
-				<article>
-					<h2> Puslapio tekstas </h2>
-					<p> Tekstas – duomenys, pateikiami ženklais, simboliais, žodžiais, žodžių junginiais, sakiniais,
-						 pastraipomis, lentelėmis, išnašomis ar kitais ženklų junginiais, parengti siekiant perteikti prasmę ir
-						darant prielaidą, jog jie suvokiami skaitytojų, mokančių tam tikrą natūraliąją arba dirbtinę kalbą.</p>
-				</article>
+<figure>
+						<div class="foto">
+						<img src="foto/1939/2.jpg" alt="Lietuvos Čempionai" >
+			 				<figcaption> Europos krepšinio čempionai 1939 m. </figcaption>
+		</figure>
+					<p><br>dddkdkkkkkkkv kkkkkkkkkkkk kkkkkk kkkkfgf df fffffffffffffffffffffkkkkkkkkkk ooooooooooo oooooooooooo</p>
+					</div>
 
-		</div>
+				</section>
 
 
+				<div class="right">
+					<h2> Informacija ir vaizdo klipai</h2>
+
+					<table align="center">
+					<tr>
+					<th colspan="4" >1939 m. Europos čempionato galutinė rikiuotė </th>
+					</tr>
+					<tr>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					</tr>
+					<tr>
+					<td>Lietuva</td>
+					<td>1</td>
+					<td>Estija</td>
+					<td>5</td>
+					</tr>
+					<tr>
+					<td>Latvija</td>
+					<td>2</td>
+					<td>Italija</td>
+					<td>6</td>
+					</tr>
+					<tr>
+					<td>Lenkija</td>
+					<td>3</td>
+					<td>Vengrija</td>
+					<td>7</td>
+					</tr>
+					<tr>
+					<td>Prancūzija</td>
+					<td>4</td>
+					<td>Suomija</td>
+					<td>8</td>
+					</tr>
+					</table>
+<br>
+					<h3> Finalas (Lietuva - Latvija) <br> galutinis rezultatas 37-36 </h3>
+					<iframe src="https://www.youtube.com/embed/q0hBUoRsX1o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+					<h3> Čempionato ištraukos</h3>
+					<iframe src="https://www.youtube.com/embed/gqm-H7W1mFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+				</div>
+</div>
+<br>
+</div>
+
+
+		<footer>
+			2018 &copy; Laurynas Čižius
+			</footer>
+
+</div>
 </body>
 
 
