--- a/index.html
+++ b/index.html
@@ -7,56 +7,21 @@
 <link rel="stylesheet" type="text/css" href="nav.css">
 <link rel="stylesheet" type="text/css" href="wstyle.css">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-<style>
-
-body{
-margin: 0;
-padding: 0;
-background-image: url("kk.jpg");
-background-size:cover;
-background-attachment: fixed;
-font-family: Century Gothic;
-font-size:20px;
-line-height:25px;
-}
-table {
-    font-family:sans-serif;
-    border-collapse: collapse;
-    width: 500px; ;
-
-}
-
-td, th {
-    border: 3px solid #000000;
-    text-align: center;
-    padding: 8px;
-		font-weight:bold;
-}
-
-tr:nth-child(even) {
-    background-color: #FFFACD;
-
-}
-
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 
 	<body>
-<div id="page">
 
 <header>
-	<h1><img src="ball.jpg"/>Lietuvos vyrų krepšinio rinktinės, priziniai pasiekimai.</h1>
+	<h1><img src="ball.jpg"/> Svarbiausi Lietuvos nacionalinės vyrų krepšinio rinktinės laimėjimai.</h1>
 </header>
 
 		<nav>
 			<ul>
 
-				<li><a href ='sav.html'> Pagrindinis </a> </li>
+				<li><a href ='index.html'> Pagrindinis </a> </li>
 
 				<li><a href ='#'> Auksas <span class="unicode"> &#9677;</span></a>
 
@@ -96,10 +61,10 @@ tr:nth-child(even) {
 
 			<div class="content">
 
-				<article>
+		
 
 					<h2> Krepšinio istorija</h2>
-					</article>
+
 
 	<p>Lietuvos klubų krepšinio istorija prasideda nuo 1920 metų tačiau Lietuvos vyrų krepšinio rinktinė, oficialiai
 		tik nuo 1935 metų, kur dalyvavo pirmojoje Europos vyrų krepšinio pirmenybių (Europos čempionato) atrankoje.
@@ -109,7 +74,6 @@ tr:nth-child(even) {
 		 1935 metais įvyko pirmosios Europos vyrų krepšinio pirmenybės, kurioje dalyvavo 10 Europos valstybių rinktinės tarp kurių nebuvo Lietuvos rinktinės, nes<i> "neperlipo atrankos barjero"</i>.</p>
 
 		 <table align="center">
-
 	<tr>
 		<th colspan="4">1935 m. Europos čempionato galutinė rikiuotė</th>
 	</tr>
@@ -149,20 +113,25 @@ tr:nth-child(even) {
 		<td>Rumunija</td>
     <td>10</td>
   </tr>
-
 </table>
 
-
-		 <p>  Kai 1937 m. buvo sužaistos draugiškos rungtynės Latvija-Lietuva,
-		  jau pralaimėta tik 29:41. Buvo nuspręsta dalyvauti Antrosiose Europos vyrų krepšinio pirmenybėse, kurios turėjo vykti Rygoje 1937 m.
-	 	 Krepšininkus ruošė žaidžiantysis treneris F. Kriaučiūnas. Iki 1937 m. Lietuvos
-	 	 vyrų rinktinė buvo iškovojusi tik vieną tarptautinę pergalę, tad į Europos čempionatą Rygoje atvyko būdami autsaideriais. Tačiau tai nesutrukdė Lietuvos rinktinei pirmąkart tapti Europos čempionais.
+		 <p> Antrosios Europos vyrų krepšinio pirmenybės vyko Rygoje 1937 m. Krepšininkus ruošė žaidžiantysis treneris Feliksas Kriaučiūnas. 1937 metais Lietuvos
+	 	 vyrų rinktinė į Europos čempionatą Rygoje atvyko būdami autsaideriais. Tačiau tai nesutrukdė Lietuvos rinktinei pirmą kartą tapti Europos čempionais.
 		   </p>
 
-<p>Lietuva gavo teisę rengti III žemyno pirmenybes Kaune. 1939 m. pastatyta pirmoji Europoje specializuota krepšinio salė – Kauno sporto halė ir tais pačiais metais Lietuvos vyrų rinktinė (žaidžiantis treneris ir kapitonas Pranas Lubinas) antrąkart laimėjo Europos čempionatą. 1938 m.
-	 Romoje moterų rinktinė tapo Europos vicečempionėmis.</p>
+<p>Lietuva gavo teisę rengti trečiąsias žemyno pirmenybes Kaune. 1939 m. pastatyta pirmoji Europoje specializuota krepšinio salė – Kauno sporto halė ir tais pačiais metais Lietuvos
+   vyrų rinktinė  antrą kart laimėjo Europos čempionatą, kuriai atstovavo žaidžiantis treneris ir kapitonas Pranas Lubinas. Prano Lubino metimų dėka paskutinėmis finalo minutėmis palaužusi Latvijos rinktinę. </p>
 
-<p>Po Antrojo pasaulinio karo Lietuvą okupavo Sovietų Sąjunga, tad geriausi šalies krepšininkai buvo priversti atstovauti SSRS rinktinei. </p>
+<p>Sovietų Sąjungai okupavus Lietuvą (1940–1990 m.), krepšinio komandos nebegalėjo atstovaudami Lietuvai dalyvauti oficialiose FIBA (Tarptautinė krepšinio federacija) rengiamose tarptautinėse varžybose.
+  Tad tik geriausi šalies krepšininkai buvo priversti atstovauti SSRS rinktinei.</p>
+  <br>
+
+
+
+
+
+
+
 
 		</div>
 
