--- a/2003.html
+++ b/2003.html
@@ -1,26 +1,20 @@
 <html>
 <head>
 
-<title> Nezinoma sveitaine </title>
+<title> LTU </title>
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="nav.css">
 <link rel="stylesheet" type="text/css" href="wstyle.css">
+
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <style>
 
-body{
-margin: 0;
-padding: 0;
-background-image: url("pp.jpg");
-background-size:cover;
-font-family: Century Gothic;
-font-size:20px;
-line-height:25px;
-}
+
 
 </style>
 
@@ -28,19 +22,20 @@ line-height:25px;
 
 
 	<body>
+<div class="content">
 
 <header>
-	<h1><img src="ball.jpg"/>Lietuvos vyrų krepšinio rinktinės, priziniai pasiekimai.</h1>
+	<h1><img src="ball.jpg"/> Svarbiausi Lietuvos nacionalinės vyrų krepšinio rinktinės laimėjimai.</h1>
 </header>
 
 
-		<div class ="nav">
+		<nav>
 
 			<ul>
 
-				<li><a href ='sav.html'> Pagrindinis </a> </li>
+				<li><a href ='index.html'> Pagrindinis </a> </li>
 
-				<li><a href ='#'> Auksas <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Auksas <span class="unicode"> &#9677;</span></a>
 
 				<ul>
 
@@ -50,7 +45,7 @@ line-height:25px;
 				</ul>
 				</li>
 
-				<li><a href ='#'> Sidabras <span style="float:right;">&#9677</span></a>
+				<li><a href ='#'> Sidabras <span class="unicode"> &#9677;</span></a>
 
 					<ul>
 
@@ -60,7 +55,7 @@ line-height:25px;
 					</ul>
 				</li>
 
-				<li><a href ='1937.html'> Bronza <span style="float:right;">&#9677</span> </a>
+				<li><a href ='1937.html'> Bronza <span class="unicode"> &#9677;</span> </a>
 
 					<ul>
 					<li><a href ='1992.html'> 1992 m. Olimpinės žaidynės  </a> </li>
@@ -74,19 +69,157 @@ line-height:25px;
 				<li style="float:right"><a href ='#'> Prisijungti </a> </li>
 
 			</ul>
-		</div>
+		</nav>
 
-			<div id="content">
-				<article>
-					<h2> Puslapio tekstas </h2>
-					<p> Tekstas – duomenys, pateikiami ženklais, simboliais, žodžiais, žodžių junginiais, sakiniais,
-						 pastraipomis, lentelėmis, išnašomis ar kitais ženklų junginiais, parengti siekiant perteikti prasmę ir
-						darant prielaidą, jog jie suvokiami skaitytojų, mokančių tam tikrą natūraliąją arba dirbtinę kalbą.</p>
-				</article>
-
-		</div>
+<div class="container">
 
 
+					<div class="left">
+
+				<section>
+					<h2> Europos čempionatas 2003 m. </h2>
+
+					<p> Antrosios Europos vyrų krepšinio pirmenybės vyko Latvijos sostinėjė Rygoje 1937 m. Krepšininkus ruošė žaidžiantysis treneris Feliksas Kriaučiūnas. 1937 metais Lietuvos
+					vyrų rinktinė į Europos čempionatą Rygoje atvyko būdami autsaideriais. Tačiau tai nesutrukdė Lietuvos rinktinei pirmą kartą tapti Europos čempionais.
+					 </p>
+
+		 	<div class="row">
+					 <div class="column">
+					 <img src="foto/2003/stombergas.jpg" alt="Štombergas" >
+						<figcaption>Saulius Štombergas <br> 1973 m.</figcaption>
+					 </div>
+					 <div class="column">
+					 <img src="foto/2003/jasikevicius.jpg" alt="Jasikevičius">
+					 <figcaption> Šarūnas Jasikevičius<br> 1976 m.</figcaption>
+					 </div>
+					 <div class="column">
+				   <img src="foto/2003/sireika.jpg" alt="Gustas">
+					 <figcaption>Antanas Sireika <br> (vyr. treneris) <br> 1956 m. </figcaption>
+					 </div>
+					 <div class="column">
+ 				 	 <img src="foto/2003/siskauskas.jpg" alt="Šiškauskas" >
+ 				 	 <figcaption> Ramūnas Šiškauskas  <br> 1978 m.</figcaption>
+					 </div>
+					 <div class="column">
+					 <img src="foto/2003/zukauskas.jpg" alt="Žukauskas" >
+					 <figcaption> Mindaugas Žukauskas <br>  1975 m. </figcaption>
+					 </div>
+			 </div>
+
+	 		 <div class="row">
+					 <div class="column">
+					 <img src="foto/2003/songaila.jpg" alt="Songaila">
+					 <figcaption>Darius Songaila <br> 1978 m.</figcaption>
+					 </div>
+					 <div class="column">
+					 <img src="foto/2003/ezukauskas.jpg" alt="Žukauskas" >
+					 <figcaption> Eurelijus Žukauskas <br> 1973 m.</figcaption>
+					 </div>
+		 		 	 <div class="column">
+		 		   <img src="foto/2003/slanina.jpg" alt="Slanina">
+		 			 <figcaption>Donatas Slanina <br> 1977 m.</figcaption>
+		 		 	 </div>
+					 <div class="column">
+					 <img src="foto/2003/lavr.jpg" alt="Lavrinovič" >
+					 <figcaption> Kšyštof Lavrinovič <br> 1979 m.</figcaption>
+					 </div>
+		 	 </div>
+
+			 <div class="row">
+					<div class="column">
+					<img src="foto/2003/praskevicius.jpg" alt="Praškevičius " >
+					<figcaption> Virginijus Praškevičius <br> 1974 m.</figcaption>
+					</div>
+					<div class="column">
+					<img src="foto/2003/salenga.jpg" alt="Šalenga">
+					<figcaption>Dainius Šalenga <br> 1977 m.</figcaption>
+					</div>
+					<div class="column">
+					<img src="foto/2003/gustas.jpg" alt="Gustas">
+					<figcaption> Giedrius Gustas  <br> 1980 m. </figcaption>
+					</div>
+					<div class="column">
+					<img src="foto/2003/macijauskas.jpg" alt="Jurgėla" >
+					<figcaption> Arvydas Macijauskas <br> 1980 m. </figcaption>
+		 	  	</div>
+ 			</div>
+
+			<figure>
+					<div class="foto">
+					<img src="foto/2003/3.jpg" alt="Lietuvos Čempionai" >
+			 		<figcaption> Europos krepšinio čempionai 2003 m. </figcaption>
+		 </figure>
+					<p><br>dddkdkkkkkkkv kkkkkkkkkkkk kkkkkk kkkkfgf df fffffffffffffffffffffkkkkkkkkkk ooooooooooo oooooooooooo</p>
+					</div>
+
+				</section>
+
+
+
+				<div class="right">
+
+					<h2> Informacija ir vaizdo klipai</h2>
+
+					<table align="center">
+					<tr>
+					<th colspan="4" >2003 m. Europos čempionato galutinė rikiuotė </th>
+					</tr>
+					<tr>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					<th>Komanda</th>
+					<th>Vieta</th>
+					</tr>
+					<tr>
+					<td>Lietuva</td>
+					<td>1</td>
+					<td>Graikija</td>
+					<td>5</td>
+					</tr>
+					<tr>
+					<td>Ispanija</td>
+					<td>2</td>
+					<td>Serbija ir Juodkalnija</td>
+					<td>6</td>
+					</tr>
+					<tr>
+					<td>Italija</td>
+					<td>3</td>
+					<td>Izraelis</td>
+					<td>7</td>
+					</tr>
+					<tr>
+					<td>Prancūzija</td>
+					<td>4</td>
+					<td>Rusija</td>
+					<td>8</td>
+					</tr>
+					<tr>
+					<td colspan="2" id="tableborder"></td>
+					<td>...</td>
+					<td>9-16</td>
+					</tr>
+					</table>
+<br>
+					<h3> Finalas (Lietuva - Ispanija) <br> galutinis rezultatas 93-84 </h3>
+				<iframe src="https://www.youtube.com/embed/viObCI199fc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+<br>
+					<h3> Lietuvos sirgalių ir rinktinės emocijos </h3>
+					<iframe src="https://www.youtube.com/embed/h943L84rK_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+				</div>
+</div>
+<br>
+</div>
+
+
+		<footer>
+			2018 &copy; Laurynas Čižius
+			</footer>
+
+</div>
 </body>
 
 
